// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-zoo79t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  color: #fff;
  background-color: #420480;
}

.cache-zoo79t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zoo79t e7ah3bn0"
    type="button"
  >
    <div
      class="cache-i7e9al em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-1mntgth-ActivityIndicator"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly loading with an icon 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-zoo79t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  color: #fff;
  background-color: #420480;
}

.cache-zoo79t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-14frhxz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zoo79t e7ah3bn0"
    type="button"
  >
    <div
      class="cache-i7e9al em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-1mntgth-ActivityIndicator"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
    <div
      class="cache-14frhxz em6gco82"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-1mntgth-ActivityIndicator"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as Link 1`] = `
<DocumentFragment>
  .cache-kz5g0u {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-kz5g0u:hover,
.cache-kz5g0u:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kz5g0u:hover,
.cache-kz5g0u:focus {
  color: #fff;
  background-color: #420480;
}

.cache-kz5g0u:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="em6gco80 e7ah3bn0 cache-kz5g0u e7ah3bn0"
    href="/"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </a>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as Link with disabled props 1`] = `
<DocumentFragment>
  .cache-1fwnkk4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #d4dae7;
  background-color: #fafafb;
  border-color: #fafafb;
  box-shadow: none;
}

.cache-1fwnkk4:hover,
.cache-1fwnkk4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fwnkk4:hover,
.cache-1fwnkk4:focus {
  color: #fff;
  background-color: #420480;
}

.cache-1fwnkk4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-1fwnkk4 e7ah3bn0"
    disabled=""
    to="/"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when acting as dom link 1`] = `
<DocumentFragment>
  .cache-zoo79t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  color: #fff;
  background-color: #420480;
}

.cache-zoo79t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<a
    aria-disabled="false"
    class="em6gco80 cache-zoo79t e7ah3bn0"
    href="/"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </a>
</DocumentFragment>
`;

exports[`Button should render correctly when disabled 1`] = `
<DocumentFragment>
  .cache-1fwnkk4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  cursor: default;
  pointer-events: none;
  color: #d4dae7;
  background-color: #fafafb;
  border-color: #fafafb;
  box-shadow: none;
}

.cache-1fwnkk4:hover,
.cache-1fwnkk4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fwnkk4:hover,
.cache-1fwnkk4:focus {
  color: #fff;
  background-color: #420480;
}

.cache-1fwnkk4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="true"
    class="em6gco80 cache-1fwnkk4 e7ah3bn0"
    disabled=""
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when extendable 1`] = `
<DocumentFragment>
  .cache-15udne0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-15udne0:hover,
.cache-15udne0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-15udne0:hover,
.cache-15udne0:focus {
  color: #fff;
  background-color: #420480;
}

.cache-15udne0:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-15udne0 .em6gco81 {
  -webkit-transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  max-width: 0;
  margin-right: 0;
  padding-left: 0;
  overflow: hidden;
}

.cache-15udne0:focus .em6gco81,
.cache-15udne0:hover .em6gco81 {
  max-width: 275px;
  margin-right: 8px;
  padding-left: 8px;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-15udne0 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly when extendable with an icon 1`] = `
<DocumentFragment>
  .cache-681whl {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-681whl:hover,
.cache-681whl:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-681whl:hover,
.cache-681whl:focus {
  color: #fff;
  background-color: #420480;
}

.cache-681whl:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-681whl .em6gco81 {
  -webkit-transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  transition: max-width 450ms ease,padding 150ms ease,margin 150ms ease;
  max-width: 0;
  margin-right: 0;
  padding-right: 0;
  overflow: hidden;
}

.cache-681whl:focus .em6gco81,
.cache-681whl:hover .em6gco81 {
  max-width: 275px;
  margin-right: 8px;
  padding-right: 8x;
}

.cache-1js4uj9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0px;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-681whl e7ah3bn0"
    type="button"
  >
    <div
      class="cache-1js4uj9 em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a custom Icon 1`] = `
<DocumentFragment>
  .cache-zoo79t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  color: #fff;
  background-color: #420480;
}

.cache-zoo79t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zoo79t e7ah3bn0"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      IconMock
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a rounded action button 1`] = `
<DocumentFragment>
  .cache-5d3o5u {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-radius: 16px;
}

.cache-5d3o5u:hover,
.cache-5d3o5u:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-5d3o5u:hover,
.cache-5d3o5u:focus {
  color: #fff;
  background-color: #420480;
}

.cache-5d3o5u:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-5d3o5u>svg {
  pointer-events: none;
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-5d3o5u e7ah3bn0"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with a tooltip 1`] = `
<DocumentFragment>
  .cache-zoo79t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  color: #fff;
  background-color: #420480;
}

.cache-zoo79t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    aria-describedby="test"
    tabindex="0"
  >
    <button
      aria-describedby="test"
      aria-disabled="false"
      class="em6gco80 cache-zoo79t e7ah3bn0"
      type="button"
    >
      <div
        class="cache-i7e9al em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-115wth8 em6gco81"
      >
        Hello
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button should render correctly with an action button 1`] = `
<DocumentFragment>
  .cache-11badm {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
  width: 32px;
  height: 32px;
  padding: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.cache-11badm:hover,
.cache-11badm:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-11badm:hover,
.cache-11badm:focus {
  color: #fff;
  background-color: #420480;
}

.cache-11badm:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-11badm>svg {
  pointer-events: none;
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-11badm e7ah3bn0"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly with an icon on the right 1`] = `
<DocumentFragment>
  .cache-zoo79t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  color: #fff;
  background-color: #420480;
}

.cache-zoo79t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

.cache-14frhxz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 8px;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zoo79t e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
    <div
      class="cache-14frhxz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button should render correctly without a children 1`] = `
<DocumentFragment>
  .cache-zoo79t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  color: #fff;
  background-color: #420480;
}

.cache-zoo79t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zoo79t e7ah3bn0"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button should render correctly without a children and an icon 1`] = `
<DocumentFragment>
  .cache-zoo79t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  color: #fff;
  background-color: #420480;
}

.cache-zoo79t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-brwenz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  pointer-events: none;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zoo79t e7ah3bn0"
    type="button"
  >
    <div
      class="cache-brwenz em6gco82"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render large 1`] = `
<DocumentFragment>
  .cache-zoo79t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  color: #fff;
  background-color: #420480;
}

.cache-zoo79t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zoo79t e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render medium 1`] = `
<DocumentFragment>
  .cache-13e80v2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 24px;
  padding: 8px 16px;
}

.cache-13e80v2:hover,
.cache-13e80v2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13e80v2:hover,
.cache-13e80v2:focus {
  color: #fff;
  background-color: #420480;
}

.cache-13e80v2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-13e80v2 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render small 1`] = `
<DocumentFragment>
  .cache-1g49am4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 16px;
  padding: 8px 16px;
}

.cache-1g49am4:hover,
.cache-1g49am4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1g49am4:hover,
.cache-1g49am4:focus {
  color: #fff;
  background-color: #420480;
}

.cache-1g49am4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1g49am4 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render xsmall 1`] = `
<DocumentFragment>
  .cache-kz72o5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
}

.cache-kz72o5:hover,
.cache-kz72o5:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kz72o5:hover,
.cache-kz72o5:focus {
  color: #fff;
  background-color: #420480;
}

.cache-kz72o5:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-kz72o5 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button size render xxsmall 1`] = `
<DocumentFragment>
  .cache-7w0l7v {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 12px;
}

.cache-7w0l7v:hover,
.cache-7w0l7v:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-7w0l7v:hover,
.cache-7w0l7v:focus {
  color: #fff;
  background-color: #420480;
}

.cache-7w0l7v:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-7w0l7v e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render info 1`] = `
<DocumentFragment>
  .cache-71g3x3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #e4edff;
  color: #3f6ed8;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-71g3x3:hover,
.cache-71g3x3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-71g3x3:hover,
.cache-71g3x3:focus {
  color: #3f6ed8;
  background-color: #cadcff;
}

.cache-71g3x3:focus {
  box-shadow: 0 0 0 2px rgba(228,237,255,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-71g3x3 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render info-bordered 1`] = `
<DocumentFragment>
  .cache-1wmuxk4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #3f6ed8;
  background-color: #fff;
  color: #3f6ed8;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1wmuxk4:hover,
.cache-1wmuxk4:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1wmuxk4 svg {
  fill: #3f6ed8;
  pointer-events: none;
}

.cache-1wmuxk4:hover,
.cache-1wmuxk4:focus {
  border: 1px solid #3f6ed8;
  color: #fff;
  background-color: #3f6ed8;
}

.cache-1wmuxk4:hover svg,
.cache-1wmuxk4:focus svg {
  fill: #fff;
}

.cache-1wmuxk4:focus {
  box-shadow: 0 0 0 2px rgba(63,110,216,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1wmuxk4 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render link 1`] = `
<DocumentFragment>
  .cache-txppqb {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #fff;
  color: #3f6ed8;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-txppqb:hover,
.cache-txppqb:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-txppqb:hover,
.cache-txppqb:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-txppqb e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary 1`] = `
<DocumentFragment>
  .cache-zoo79t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #4f0599;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zoo79t:hover,
.cache-zoo79t:focus {
  color: #fff;
  background-color: #420480;
}

.cache-zoo79t:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-zoo79t e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary-bordered 1`] = `
<DocumentFragment>
  .cache-170lvoc {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #4f0599;
  background-color: #fff;
  color: #4f0599;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-170lvoc:hover,
.cache-170lvoc:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-170lvoc svg {
  fill: #4f0599;
  pointer-events: none;
}

.cache-170lvoc:hover,
.cache-170lvoc:focus {
  border: 1px solid #4f0599;
  color: #fff;
  background-color: #4f0599;
}

.cache-170lvoc:hover svg,
.cache-170lvoc:focus svg {
  fill: #fff;
}

.cache-170lvoc:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-170lvoc e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render primary-soft-bordered 1`] = `
<DocumentFragment>
  .cache-6f4324 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #b2b6c3;
  background-color: #fff;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-6f4324:hover,
.cache-6f4324:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-6f4324 svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-6f4324:hover,
.cache-6f4324:focus {
  border: 1px solid #4f0599;
  color: #fff;
  background-color: #4f0599;
}

.cache-6f4324:hover svg,
.cache-6f4324:focus svg {
  fill: #fff;
}

.cache-6f4324:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-6f4324 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render secondary 1`] = `
<DocumentFragment>
  .cache-1cfcchx {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1cfcchx:hover,
.cache-1cfcchx:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1cfcchx:hover,
.cache-1cfcchx:focus {
  color: #4a4f62;
  background-color: #e9e7ec;
}

.cache-1cfcchx:focus {
  box-shadow: 0 0 0 2px rgba(246,245,247,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1cfcchx e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render secondary-bordered 1`] = `
<DocumentFragment>
  .cache-6f4324 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #b2b6c3;
  background-color: #fff;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-6f4324:hover,
.cache-6f4324:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-6f4324 svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-6f4324:hover,
.cache-6f4324:focus {
  border: 1px solid #4f0599;
  color: #fff;
  background-color: #4f0599;
}

.cache-6f4324:hover svg,
.cache-6f4324:focus svg {
  fill: #fff;
}

.cache-6f4324:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-6f4324 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success 1`] = `
<DocumentFragment>
  .cache-5vjc6v {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #45d6b5;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-5vjc6v:hover,
.cache-5vjc6v:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-5vjc6v:hover,
.cache-5vjc6v:focus {
  color: #fff;
  background-color: #30d1ad;
}

.cache-5vjc6v:focus {
  box-shadow: 0 0 0 2px rgba(69,214,181,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-5vjc6v e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success-bordered 1`] = `
<DocumentFragment>
  .cache-1klmwgb {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #45d6b5;
  background-color: #fff;
  color: #45d6b5;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1klmwgb:hover,
.cache-1klmwgb:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1klmwgb svg {
  fill: #45d6b5;
  pointer-events: none;
}

.cache-1klmwgb:hover,
.cache-1klmwgb:focus {
  border: 1px solid #45d6b5;
  color: #fff;
  background-color: #45d6b5;
}

.cache-1klmwgb:hover svg,
.cache-1klmwgb:focus svg {
  fill: #fff;
}

.cache-1klmwgb:focus {
  box-shadow: 0 0 0 2px rgba(69,214,181,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1klmwgb e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render success-soft-bordered 1`] = `
<DocumentFragment>
  .cache-13pnyj3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #b2b6c3;
  background-color: #fff;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-13pnyj3:hover,
.cache-13pnyj3:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13pnyj3 svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-13pnyj3:hover,
.cache-13pnyj3:focus {
  border: 1px solid #45d6b5;
  color: #fff;
  background-color: #45d6b5;
}

.cache-13pnyj3:hover svg,
.cache-13pnyj3:focus svg {
  fill: #fff;
}

.cache-13pnyj3:focus {
  box-shadow: 0 0 0 2px rgba(69,214,181,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-13pnyj3 e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render transparent 1`] = `
<DocumentFragment>
  .cache-1r21p8j {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: transparent;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-1r21p8j:hover,
.cache-1r21p8j:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-1r21p8j e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning 1`] = `
<DocumentFragment>
  .cache-f30zyo {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #ef5774;
  color: #fff;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-f30zyo:hover,
.cache-f30zyo:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-f30zyo:hover,
.cache-f30zyo:focus {
  color: #fff;
  background-color: #ed4061;
}

.cache-f30zyo:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-f30zyo e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning-bordered 1`] = `
<DocumentFragment>
  .cache-vortgb {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #ef5774;
  background-color: #fff;
  color: #ef5774;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-vortgb:hover,
.cache-vortgb:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-vortgb svg {
  fill: #ef5774;
  pointer-events: none;
}

.cache-vortgb:hover,
.cache-vortgb:focus {
  border: 1px solid #ef5774;
  color: #fff;
  background-color: #ef5774;
}

.cache-vortgb:hover svg,
.cache-vortgb:focus svg {
  fill: #fff;
}

.cache-vortgb:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-vortgb e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button variant render warning-soft-bordered 1`] = `
<DocumentFragment>
  .cache-vwog3t {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  border: 1px solid #b2b6c3;
  background-color: #fff;
  color: #b2b6c3;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.cache-vwog3t:hover,
.cache-vwog3t:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-vwog3t svg {
  fill: #b2b6c3;
  pointer-events: none;
}

.cache-vwog3t:hover,
.cache-vwog3t:focus {
  border: 1px solid #ef5774;
  color: #fff;
  background-color: #ef5774;
}

.cache-vwog3t:hover svg,
.cache-vwog3t:focus svg {
  fill: #fff;
}

.cache-vwog3t:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<button
    aria-disabled="false"
    class="em6gco80 cache-vwog3t e7ah3bn0"
    type="button"
  >
    <div
      class="cache-115wth8 em6gco81"
    >
      Hello
    </div>
  </button>
</DocumentFragment>
`;
